--- a/app/view/index.ejs
+++ b/app/view/index.ejs
@@ -89,6 +89,26 @@
 						<% }); %>
 					</div>
 				</div>
+				<% if (locals.presets) { %>
+					<hr>
+					<div class="form-group">
+						<div class="btn-group btn-group-justified">
+							<% presets.forEach(function(preset, index) { %>
+								<% if (index > 0 && index%3 === 0) { %>
+										</div>
+									</div>
+									<div class="form-group">
+										<div class="btn-group btn-group-justified">
+								<% } %>
+								<div class="btn-group">
+									<button type="button" id="btnPreset_<%= index %>" data-id="<%= index %>" class="btn btn-default">
+										<%= preset.name %>
+									</button>
+								</div>
+							<% }); %>
+						</div>
+					</div>
+				<% } %>
 			</form>
 		</div>
 	</body>
